ATLAS-2035: implement typing